--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,6 @@ PORT = 3000
 JWT_SECRET = nexawings
 EMAIL = nexawingsenterprises@gmail.com
 PASSWORD = vsdy zdum hhij jwfx
-MONGODB = mongodb+srv://arkodeep3404:jwKPziB5azZPWES4@galvaai.0hnezhd.mongodb.net/
+MONGODB = mongodb+srv://arkodeep3404:jwKPziB5azZPWES4@galvaai.0hnezhd.mongodb.net/galvaai/
 FRONTEND_URL = http://localhost:5173/
 BACKEND_URL = http://localhost:3000/
