--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 PORT = 8002
 JWT_SECRET = nexawings
-EMAIL = nexawingsenterprises@gmail.com
-PASSWORD = vsdy zdum hhij jwfx
+EMAIL = no-reply@galva.ai
+PASSWORD = n o y p q g j y i x c k s p i s
 MONGODB = mongodb+srv://arkodeep3404:jwKPziB5azZPWES4@galvaai.0hnezhd.mongodb.net/galvaai
 FRONTEND_URL = http://localhost:8000/
 BACKEND_URL = http://localhost:8002/
