--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT = 8002
 JWT_SECRET = nexawings
-EMAIL = no-reply@galva.ai
+EMAIL = galvanoai13@gmail.com
 PASSWORD = n o y p q g j y i x c k s p i s
 MONGODB = mongodb+srv://arkodeep3404:jwKPziB5azZPWES4@galvaai.0hnezhd.mongodb.net/galvaai
 FRONTEND_URL = http://localhost:8000/
