--- a/backend/.env
+++ b/backend/.env
@@ -3,5 +3,5 @@ JWT_SECRET = nexawings
 EMAIL = galvanoai13@gmail.com
 PASSWORD = n o y p q g j y i x c k s p i s
 MONGODB = mongodb+srv://arkodeep3404:jwKPziB5azZPWES4@galvaai.0hnezhd.mongodb.net/galvaai
-FRONTEND_URL = http://localhost:8000/
-BACKEND_URL = http://localhost:8002/
+FRONTEND_URL = https://galva.ai/
+BACKEND_URL = https://galva.ai/backend-api/
